--- a/20250918.ipynb
+++ b/20250918.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a55f67fe",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello 다시 수정한거야\n"
+      "hello\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello 다시 수정한거야\")\n"
+    "print(\"hello\")\n"
    ]
   }
  ],
