vscode, github 연결 확인 테스트

--- a/20250923.ipynb
+++ b/20250923.ipynb
@@ -306,61 +306,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "07a55417",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mymodule as mm\n",
+    "# from mymodule import my_add"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2fd8ebdc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'my_add' from 'mymodule' (c:\\Users\\USER\\Desktop\\Python-Project\\mymodule.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmymodule\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmm\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmymodule\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m my_add\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'my_add' from 'mymodule' (c:\\Users\\USER\\Desktop\\Python-Project\\mymodule.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "-2\n"
      ]
     }
    ],
    "source": [
-    "import mymodule as mm\n",
-    "from mymodule import my_add"
+    "print(mm.my_add(7, 3))\n",
+    "print(mm.my_sub(3,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cd87a0f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'__main__'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__name__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2fd8ebdc",
+   "id": "93a00303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def walk(self):\n",
+    "        print(f'{self.name}이 걸어가요')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "68c5738d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person1 = Person(\"정성령\", 23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b7617e9d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'mymodule' has no attribute 'my_add'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmy_add\u001b[49m(\u001b[32m7\u001b[39m, \u001b[32m3\u001b[39m))\n",
-      "\u001b[31mAttributeError\u001b[39m: module 'mymodule' has no attribute 'my_add'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정성령이 걸어가요\n"
      ]
     }
    ],
    "source": [
-    "print(mm.my_add(7, 3))"
+    "person1.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e0f04c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NewPerson(Person):\n",
+    "    def fly(self):\n",
+    "        print(f'{self.name}이 하늘을 날아요')\n",
+    "    def walk(self):\n",
+    "        print(f'{self.name}이 너무 잘 걸어요')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "348f66f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person3 = NewPerson(\"정호석\", 33)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0398084d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정호석이 너무 잘 걸어요\n"
+     ]
+    }
+   ],
+   "source": [
+    "person3.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "202efb90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정호석이 하늘을 날아요\n"
+     ]
+    }
+   ],
+   "source": [
+    "person3.fly()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a93900f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 결제 시스템\n",
+    "\n",
+    "def pay_credit(card_info, amount):\n",
+    "    \"\"\" 신용카드 결제 로직 \"\"\"\n",
+    "    print(f\"{card_info['card_number']}카드로 {amount}원 결제합니다.\")\n",
+    "    print(\"결제 완료\")\n",
+    "\n",
+    "def pay_point(point_wallet, amount):\n",
+    "    if point_wallet['balance'] >= amount:\n",
+    "        point_wallet['balance'] -= amount\n",
+    "        print(f\"포인트 {amount}점을 사용해서 결제하였습니다.\")\n",
+    "    else:\n",
+    "        print(\"포인트가 부족합니다.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c0510e73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_card = {\n",
+    "    'type':'credit_card',\n",
+    "    'card_number': '1234-5678-xxxx',\n",
+    "    'cvc' : 123,\n",
+    "}\n",
+    "\n",
+    "my_point = {\n",
+    "    'type':'point_wallet',\n",
+    "    'balance':50000\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "875e558c",
+   "id": "f4985441",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def payment(payment_method, amount):\n",
+    "    payment_type = payment_method['type']\n",
+    "\n",
+    "    if payment_type == 'credit_card':\n",
+    "        pay_credit(payment_method, amount)\n",
+    "    elif payment_type == 'point_wallet':\n",
+    "        pay_point(payment_method, amount)\n",
+    "    else:\n",
+    "        print(\"지원되지 않는 결제방식\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "86d7f3cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'credit_card', 'card_number': '1234-5678-xxxx', 'cvc': 123}\n",
+      "1234-5678-xxxx카드로 2500원 결제합니다.\n",
+      "결제 완료\n",
+      "{'type': 'point_wallet', 'balance': 50000}\n",
+      "포인트 10000점을 사용해서 결제하였습니다.\n",
+      "{'type': 'point_wallet', 'balance': 40000}\n",
+      "포인트가 부족합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "payment(credit_card, 2500)\n",
+    "payment(my_point, 10000)\n",
+    "payment(my_point, 50000)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf6e8da",
+   "id": "472ce322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PaymentMethod:\n",
+    "    def pay(self, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "e00b22ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\user\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (2.3.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7d28f49d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting beautifulsoup4\n",
+      "  Downloading beautifulsoup4-4.13.5-py3-none-any.whl.metadata (3.8 kB)\n",
+      "Collecting soupsieve>1.2 (from beautifulsoup4)\n",
+      "  Downloading soupsieve-2.8-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\user\\appdata\\roaming\\python\\python311\\site-packages (from beautifulsoup4) (4.15.0)\n",
+      "Downloading beautifulsoup4-4.13.5-py3-none-any.whl (105 kB)\n",
+      "   ---------------------------------------- 0.0/105.1 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/105.1 kB ? eta -:--:--\n",
+      "   --- ------------------------------------ 10.2/105.1 kB ? eta -:--:--\n",
+      "   --------------- ----------------------- 41.0/105.1 kB 495.5 kB/s eta 0:00:01\n",
+      "   -------------------------------------- 105.1/105.1 kB 870.4 kB/s eta 0:00:00\n",
+      "Downloading soupsieve-2.8-py3-none-any.whl (36 kB)\n",
+      "Installing collected packages: soupsieve, beautifulsoup4\n",
+      "Successfully installed beautifulsoup4-4.13.5 soupsieve-2.8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "43fe4d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "3ba58dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fba67957",
    "metadata": {},
    "outputs": [],
    "source": []
